--- a/package.json
+++ b/package.json
@@ -10,34 +10,49 @@
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "check:js": "Get-ChildItem -Path src -Include *.js,*.js.map -Recurse"
+    "check:js": "Get-ChildItem -Path src -Include *.js,*.js.map -Recurse",
+    "chromatic": "npx chromatic --project-token=chpt_45667b4019442ae"
   },
   "dependencies": {
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^4.1.2",
     "@eslint/js": "^9.36.0",
-    "@storybook/addon-essentials": "^8.4.2",
-    "@storybook/addon-interactions": "^8.4.2",
-    "@storybook/react": "^8.4.2",
-    "@storybook/test-runner": "^0.19.1",
-    "@storybook/theming": "^8.4.2",
+    "@storybook/addon-a11y": "^10.0.5",
+    "@storybook/addon-docs": "10.0.5",
+    "@storybook/addon-vitest": "^10.0.5",
+    "@storybook/react": "^10.0.5",
+    "@storybook/react-vite": "^10.0.5",
+    "@storybook/test-runner": "^0.24.1",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.19",
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.4",
+    "@vitest/browser-playwright": "^4.0.7",
+    "@vitest/coverage-v8": "^4.0.7",
     "autoprefixer": "10.4.21",
+    "chromatic": "^13.3.3",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
+    "eslint-plugin-storybook": "10.0.5",
     "globals": "^16.4.0",
+    "playwright": "^1.56.1",
     "postcss": "8.5.6",
+    "storybook": "^10.0.5",
     "tailwindcss": "3.4.18",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
-    "vite": "^7.1.7"
+    "vite": "^7.1.7",
+    "vitest": "^4.0.7"
+  },
+  "eslintConfig": {
+    "extends": [
+      "plugin:storybook/recommended"
+    ]
   }
 }
